--- a/busqueda.htm
+++ b/busqueda.htm
@@ -34,7 +34,7 @@
 
 
 <tr>
-<td><font face=arial size=2>Tamaño de Rin</font>
+<td><font face=arial size=2>Tamano de Rin</font>
 </td>
 
 <td><font face=arial size=2>
