--- a/guardar.htm
+++ b/guardar.htm
@@ -29,7 +29,7 @@ Firestone
 
 
 <tr>
-<td><font face=arial size=2>Tamaño de Rin</font>
+<td><font face=arial size=2>Tamano de Rin</font>
 </td>
 
 <td><font face=arial size=2>
